Changes for version 1.21.0.  Added OAuth support and updated youtube and picassa data model classes